# Perceptron

./: .gitignore  CMakeLists.txt  README.md  build.sh  example1.cpp  example2.hpp  main.cpp  neuron.cpp  neuron.hpp  perceptron.cpp  perceptron.hpp  perceptron.ipp  resource.cpp  resource.hpp  run.sh  test_neuron.hpp
src/: CMakeLists.txt
src/example/example2/: example2.cpp
src/example1/: CMakeLists.txt  example1.cpp  example1.hpp
src/example2/: CMakeLists.txt  example2.cpp
src/main/: CMakeLists.txt
src/perceptron/: CMakeLists.txt  perceptron.hpp  perceptron.ipp  resource.cpp  resource.hpp
src/perceptron/include/: perceptron.hpp  perceptron.ipp
tests/: CMakelists.txt
